--- a/components/style.css
+++ b/components/style.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background-image: url('https://media.istockphoto.com/id/1478836237/photo/black-floor-monochromatic-black-and-white-tones.jpg?s=612x612&w=0&k=20&c=Ca2LRNdWE76WqeWK83CBs3WKOmnGMynDxTLXk5A5F1M=');
+    background-image: url('https://images.unsplash.com/photo-1533239209408-083811c01048?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cGF2aW5nJTIwc3RvbmV8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=600&q=60');
     /* background-size:cover; */
     background-position: center;
     /* background-repeat: no-repeat; */
